--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
-# Maven
-backend/target/
+# Build outputs
+build/
+.gradle/
+gradle/wrapper/gradle-wrapper.jar
+
+# IDE metadata
 **/.idea/
 **/.classpath
 **/.project
 **/.settings/
-
-# Node
-frontend/node_modules/
-frontend/dist/
 
 # OS
 .DS_Store
