--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.telegram:telegrambots-spring-boot-starter:6.9.7.1'
     implementation 'org.apache.commons:commons-csv:1.11.0'
+    implementation 'com.google.auth:google-auth-library-oauth2-http:1.23.0'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
