Add client support

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,11 +7,12 @@ spring:
 
 google:
   sheets:
-    spreadsheet-id: "${GOOGLE_SHEETS_ID:1-HN3fM6N9PswKHqMc6Xbb52XJ0pXR_tJOiJUcGRAKyE}"
     worksheet-gid: "${GOOGLE_SHEETS_GID:0}"
     service-account-key-json: "${GOOGLE_SERVICE_ACCOUNT_KEY_JSON:}"
 
 telegram:
+  clients:
+    tonykuz: ${GOOGLE_SHEETS_ID_1}
   bot:
     token: "${TELEGRAM_BOT_TOKEN:}"
     username: "${TELEGRAM_BOT_USERNAME:fitness-sheet-reader-bot}"
